[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/mobile/ball.png" type="Texture" id=1]
[ext_resource path="res://ui/mobile/background.png" type="Texture" id=2]
[ext_resource path="res://ui/mobile/VirtualJoystick.gd" type="Script" id=3]

[node name="VirtualJoystick" type="TouchScreenButton"]
position = Vector2( 246, 118 )
normal = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="BigCircle" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.588235 )
texture = ExtResource( 2 )

[node name="SmallCircle" type="Sprite" parent="BigCircle"]
visible = false
texture = ExtResource( 1 )

[connection signal="pressed" from="." to="." method="_on_VirtualJoystick_pressed"]
[connection signal="released" from="." to="." method="_on_VirtualJoystick_released"]
